<resources>


    <string name="app_name">NAYA SHOPPY</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_screen_splash">ScreenSplash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splash_content">Splash...</string>
    <string name="search_home_hint">Search your item</string>
    <string name="arrival_image_desc">Product image</string>
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="title_activity_rate_app">RateApp</string>
    <string name="logo">NayaShoppy logo</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="hint_username">Enter your Mobile or Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Sign in</string>
    <string name="filter_icon_sort">SORT</string>
    <string name="specs_head">SPECIFICATIONS</string>
    <string name="button_see_specs">SEE FULL SPECIFICATION</string>
    <string name="no_reviews">No Reviews at the moment</string>

    <string name="filter_apply">Apply Filters</string>
    <string name="filter_reset">Reset</string>

    <string name="signup_button_text">Dont have an account? Sign Up</string>
    <string name="signup_button">Sign Up</string>
    <string name="hint_email_id">Enter Email Id</string>
    <string name="hint_phone">Enter Mobile No.</string>
    <string name="hint_dob">Enter Date of Birth</string>
    <string name="button_SignUp">Join</string>

    <string name="facebook_app_id">1881714012056744</string>
    <string name="title_activity_screen_sign_up">ScreenSignUp</string>
</resources>
