<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/screen_signup"
    android:background="@drawable/loginbg"
    >


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/frameLayout">

        <ImageView android:layout_width="70dp"
            android:layout_height="95dp"
            android:src="@drawable/logo"
            />


    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:textColor="@android:color/white"
        android:textSize="30sp"

        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:theme="@style/TextLabel"
        android:layout_below="@+id/frameLayout"
        android:layout_marginTop="10dp"
       >

        <com.attribe.nayashoppy.app.util.CustomEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/hint_email_id"

            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/contact_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:theme="@style/TextLabel"
        android:layout_below="@+id/emailInput"
        android:layout_marginTop="5dp"
        >

        <com.attribe.nayashoppy.app.util.CustomEditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone"
            android:hint="@string/hint_phone"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dob_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:theme="@style/TextLabel"
        android:layout_below="@+id/contact_input"
        android:layout_marginTop="5dp"
        >

        <com.attribe.nayashoppy.app.util.CustomEditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone"
            android:hint="@string/hint_dob"

            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout

        android:id="@+id/signup_pw_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/dob_input"
        android:layout_marginTop="5dp"
        android:theme="@style/TextLabel"
        >

        <com.attribe.nayashoppy.app.util.CustomEditText
            android:id="@+id/signup_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user"
            android:hint="@string/hint_password"

            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/signup_pw_input"
        android:background="@drawable/border_signin"
        android:textColor="@color/black"
        android:text="@string/button_SignUp"
        />




</RelativeLayout>