<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:tools="http://schemas.android.com/tools"
                tools:showIn="@layout/screen_login"
                android:background="@drawable/loginbg">


    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:id="@+id/frameLayout">

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                    android:src="@drawable/login_logo"
                />


    </FrameLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frameLayout"
                android:layout_marginTop="40dp"
                android:layout_alignStart="@+id/frameLayout">

                <com.attribe.nayashoppy.app.util.CustomEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icon_user"
                        android:hint="@string/hint_username"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        />
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameInput"
            android:layout_marginTop="15dp"
            android:layout_alignStart="@+id/frameLayout">

        <com.attribe.nayashoppy.app.util.CustomEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_password"
                android:textColorHint="@color/white"
                android:hint="@string/hint_password"
                android:textColor="@color/white"
        />

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_below="@+id/passwordInput"
            android:background="@drawable/border_signin"
            android:textColor="@color/black"
            android:text="@string/button_login"
            />

    <com.facebook.login.widget.LoginButton
            android:id="@+id/fbLogin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_or"
            android:layout_below="@+id/signin"
            android:layout_marginLeft="170dp"
  />

    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signin"
            android:layout_centerHorizontal="true"
    />

</RelativeLayout>